ADD - default variable to categories and update to ProductController
