# app/Http/Requests/UpdateProductSecondRequest.php
@@ -1,0 +1,45 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class UpdateProductSecondRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'nullable|min:5|max:255',
+            'description' => 'nullable',
+            'image' => 'nullable|image|max:10240', // max 10mb
+            'price' => 'nullable|numeric|between:0,99999999.99',
+            'discount_percentage' => 'nullable|numeric|between:0,999.99',
+            'categories' => ''
+        ];
+    }
+
+    // Sovrascrivi il metodo failedValidation per restituire una risposta JSON
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(response()->json([
+            'status' => 'error',
+            'message' => 'Validation failed',
+            'errors' => $validator->errors(),
+        ], 422));
+    }
+}
